Fix currency form for Safari + improve layout on small screens
Fixes #125

Basically it looks like Safari won't trigger the submit action with an
invisible submit button. This PR also makes the submit button visible
and gives it useful interactions with the form state.

--- a/less/site.less
+++ b/less/site.less
@@ -165,8 +165,8 @@ a {
             .wrapper > :first-child {
                 // override padding and dimensions
                 // on mobile
-                padding: 0;
-                width: 85% !important;
+                padding: 16px;
+                width: 100% !important;
             }
         }
     }
